# xfce4-battery-plugin

./: .cppcheck-false-positives  .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  PKGBUILD  README  README.md  THANKS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  meson.build  module.xml
icons/: Makefile.am  meson.build
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  Makefile.in  acpi-linux.c  apm.h  apmlib.c  batt-plugin.c  battery-monitor.c  battery-monitor.desktop.in.in  battery-monitor.h  battery-plugin.c  battery-plugin.h  battery-preferences.c  battery-preferences.h  battery.c  battery.desktop.in  battery.h  battmon.c  battmon.desktop.in.in  libacpi.c  libacpi.h  libapm.c  libapm.h  libbattmon_la-apmlib.loT  libsmc.c  libsmc.h  meson.build  settings.ui
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  nb.po  (+29 more)
simulator/: Makefile  simulator.c
