# $Id$

iconsdir =								\
	$(datadir)/icons/hicolor/24x24/apps

icons_DATA =								\
	ac-adapter.png							\
	battery-discharging-000.png					\
	battery-discharging-020.png					\
	battery-discharging-040.png					\
	battery-discharging-060.png					\
	battery-discharging-080.png					\
	battery-discharging-100.png					\
	battery-charging-000.png					\
	battery-charging-020.png					\
	battery-charging-040.png					\
	battery-charging-060.png					\
	battery-charging-080.png					\
	battery-charging-100.png					\
	battery-charged.png						\
	battery-missing.png						\
	battery.png

EXTRA_DIST =								\
	$(icons_DATA)
