iconsdir = $(datadir)/icons/hicolor/24x24/apps
icons_DATA =								\
	xfce4-battery-critical.png xfce4-battery-critical-charging.png	\
	xfce4-battery-low.png xfce4-battery-low-charging.png		\
	xfce4-battery-ok.png xfce4-battery-ok-charging.png		\
	xfce4-battery-full.png xfce4-battery-full-charging.png		\
	xfce4-battery-missing.png xfce4-battery-plugin.png

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
