# $Id$

iconsdir =								\
	$(datadir)/icons/hicolor/scalable/apps

icons_DATA =								\
	ac-adapter.svg							\
	battery-discharging-000.svg					\
	battery-discharging-020.svg					\
	battery-discharging-040.svg					\
	battery-discharging-060.svg					\
	battery-discharging-080.svg					\
	battery-discharging-100.svg					\
	battery-charging-000.svg					\
	battery-charging-020.svg					\
	battery-charging-040.svg					\
	battery-charging-060.svg					\
	battery-charging-080.svg					\
	battery-charging-100.svg					\
	battery-charged.svg						\
	battery-missing.svg						\
	battery.svg

EXTRA_DIST =								\
	$(icons_DATA)
