iconsdir = $(datadir)/icons/hicolor/scalable/apps
icons_DATA =								\
	xfce4-battery-critical.svg xfce4-battery-critical-charging.svg	\
	xfce4-battery-low.svg xfce4-battery-low-charging.svg		\
	xfce4-battery-ok.svg xfce4-battery-ok-charging.svg		\
	xfce4-battery-full.svg xfce4-battery-full-charging.svg		\
	xfce4-battery-missing.svg xfce4-battery-plugin.svg

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
